<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Robot Scouter</string>

    <!-- Common -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_connection">No internet connection</string>
    <string name="sign_in_required">Sign in required</string>
    <string name="open">Open</string>
    <string name="number_too_big_error">Please enter a number between 0 and 2^63 – 1</string>

    <!-- Tutorials -->
    <string name="create_first_team">Create your first team</string>
    <string name="no_team_selected">Select a team to start scouting</string>
    <string name="no_teams">Teams you add appear here</string>
    <string name="no_scouts">Scouts you add appear here</string>
    <string name="no_templates">Scout templates you add appear here</string>

    <!-- Media upload -->
    <string name="should_upload_media_dialog_title">Upload media to The Blue Alliance?</string>
    <string name="should_upload_media_rationale">If you choose to opt-in, your media will be shared with <a href="https://thebluealliance.com">The Blue Alliance</a> to help other Robot Scouter users and the greater TBA community.</string>
    <string name="save_response">Save response</string>

    <!-- Team List Activity -->
    <string name="hint_team_number">Team number</string>

    <string name="unknown_team">Unknown</string>
    <string name="delete">Delete</string>
    <string name="caution_delete">The following teams will be deleted for you and your teammates:\n\n%s</string>
    <string name="confirm_action">Are you sure?</string>

    <string name="select_all">Select all</string>
    <string name="multiple_teams_selected">Multiple teams selected</string>

    <string name="share">Share</string>
    <plurals name="share_title">
        <item quantity="one">Share team %s</item>
        <item quantity="other">Share teams %s</item>
    </plurals>
    <plurals name="share_message">
        <item quantity="one">You were invited to edit team %s with me in Robot Scouter!</item>
        <item quantity="other">You were invited to edit teams %s with me in Robot Scouter!</item>
    </plurals>
    <plurals name="share_call_to_action">
        <item quantity="one">Import team %s into Robot Scouter</item>
        <item quantity="other">Import teams %s into Robot Scouter</item>
    </plurals>

    <!-- Spreadsheet exporting -->
    <string name="export_spreadsheet">Export spreadsheet</string>
    <plurals name="export_share_title">
        <item quantity="one">Share team %s’s scouting data</item>
        <item quantity="other">Share teams %s’s scouting data</item>
    </plurals>
    <string name="write_storage_rationale_spreadsheet">Robot Scouter needs access to your storage to create the spreadsheet file.</string>
    <string name="never_again">Don’t show again</string>
    <string name="export_hint">Export started; view progress in the notification drawer.</string>
    <string name="export_complete_title">Spreadsheet exporting complete</string>
    <plurals name="export_complete_summary">
        <item quantity="one">1 team exported</item>
        <item quantity="other">%d teams exported</item>
    </plurals>
    <plurals name="export_complete_message">
        <item quantity="one">Exported team %s.</item>
        <item quantity="other">Exported teams %s.</item>
    </plurals>
    <string name="export_in_progress_title">Exporting spreadsheet</string>
    <string name="exporting_status_loading">Loading teams</string>
    <string name="exporting_status_team">Exporting team %s’s sheet</string>
    <string name="exporting_status_average">Exporting average sheet</string>
    <string name="exporting_status_cleanup">Cleanup</string>
    <string name="export_warning_offline">Exporting spreadsheet while offline may yield incomplete results.</string>
    <string name="unsupported_device">WARNING: you are using an unsupported device</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_in">Successfully signed in!</string>
    <string name="anonymous_sign_in_failed">Anonymous sign in failed</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="try_again">Try again</string>

    <string name="donate">Donate</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="copy_debug_info">Copy debug info</string>
    <string name="debug_info_name">Robot Scouter debug info</string>
    <string name="debug_info_copied">Debug info copied to clipboard</string>

    <string name="developed_with_love">Robot Scouter is developed with 💖 by <a href="https://github.com/SUPERCILEX">Alex Saveau</a> and the icon was designed by <a href="https://github.com/andrewda">Andrew Dassonville</a>.\n\nIf you want to try out new features before everyone else, feel free to join <a href="https://play.google.com/apps/testing/com.supercilex.robotscouter">the beta</a>.\n\nAlso, Robot Scouter is <a href="https://github.com/SUPERCILEX/Robot-Scouter">open-source</a> so please <a href="https://github.com/SUPERCILEX/Robot-Scouter/issues/new">file bugs and feature requests</a>!</string>

    <string name="donate_amount">$%d</string>
    <string name="donate_monthly">Automatically donate each month</string>
    <string name="donate_cancel_message">Are you sure you don\'t want to donate? We appreciate any donation no matter how small!</string>
    <string name="donate_thanks">Thank you!!! Any and all help is greatly appreciated!</string>

    <string name="teams_imported">Teams successfully imported</string>
    <string name="uri_parse_error">Error: couldn\'t parse URL</string>

    <string name="update">Update</string>
    <string name="update_required_title">Update Robot Scouter</string>
    <string name="update_required_message">An update is required for Robot Scouter to work correctly.</string>

    <string name="write_storage_rationale_media">Robot Scouter needs access to your storage to save your photo.</string>

    <!-- Scout Activity -->
    <string name="title_activity_scout">Scout</string>
    <string name="title_scout_tab">Scout %d</string>
    <string name="offline_reassurance">Offline. Data will be saved</string>
    <string name="should_delete_team">Delete team?</string>
    <string name="should_delete_team_message">You have deleted the last scout for team %s.</string>

    <string name="add_scout">Add scout/team</string>
    <string name="add_media">Add media</string>
    <string name="add_scout_long">Add a new scout or team</string>

    <string name="visit_team_website">Visit team %s’s website</string>
    <string name="visit_team_website_on_tba">Visit team %s on The Blue Alliance</string>

    <string name="edit_team_details">Edit team details</string>
    <string name="team_details">Team details</string>
    <string name="team_name">Team name</string>
    <string name="team_website">Team website</string>
    <string name="team_media_hint">Team media url</string>
    <string name="malformed_url">Make sure you have a valid url.</string>

    <string name="edit_scout_name">Edit scout name</string>
    <string name="scout_name">Scout name</string>
    <string name="delete_scout">Delete scout</string>
    <string name="edit_value">Edit value</string>
    <string name="value">Value</string>

    <string name="edit_template">Edit next scout template</string>
    <string name="edit_spinner_items">Edit items</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="reset_template_all">Reset scouting template for all teams</string>
    <string name="reset_template_team">Reset scouting template for this team only</string>
    <string name="remove_metrics">Remove all metrics</string>
    <string name="reset">Reset</string>

    <string name="add_checkbox">Add checkbox</string>
    <string name="add_counter">Add counter</string>
    <string name="add_spinner">Add item selector</string>
    <string name="add_note">Add note</string>
    <string name="add_stopwatch">Add stopwatch</string>
    <string name="add_header">Add header</string>
    <string name="hint_notes">Text</string>
    <string name="checkbox_name">Checkbox name</string>
    <string name="counter_name">Counter name</string>
    <string name="spinner_name">Item selector name</string>
    <string name="note_name">Note name</string>
    <string name="stopwatch_name">Stopwatch name</string>
    <string name="header_name">Header name</string>

    <string name="unit">Unit</string>
    <string name="start_stopwatch">Start</string>
    <string name="stop_stopwatch">Stop (%s)</string>
    <string name="cycle_item">Cycle %d</string>
    <string name="average">Average</string>

    <!-- Template editor activity -->
    <string name="title_activity_template">Template editor</string>
    <string name="edit_templates">Edit scout templates</string>
    <string name="title_template_tab">Template %d</string>

    <!-- Notifications -->
    <string name="export_group_name">Spreadsheet exporting</string>
    <string name="export_channel_name">Completed exports</string>
    <string name="export_channel_description">Displays an actionable notification to manage the completed export.</string>
    <string name="export_in_progress_channel_name">In-progress exports</string>
    <string name="export_in_progress_channel_description">Displays the status of an in-progress export.</string>

    <!-- Accessibility -->
    <string name="accessibility_edit_team_name">Edit the team name</string>
    <string name="accessibility_robot_icon">A picture of the team’s robot.</string>
    <string name="accessibility_increment_counter">Increment counter</string>
    <string name="accessibility_decrement_counter">Decrement counter</string>
    <string name="accessibility_reorder">The reorder icon. It can be used to change the order of scout metrics.</string>

    <!-- Other -->
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://supercilex.github.io\",\n  }\n}]</string>
</resources>
